--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0"
