--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "convex": "^1.16.4",
+    "emoji-picker-react": "^4.12.0",
     "lucide-react": "^0.451.0",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-textarea-autosize": "^8.5.4",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
