--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "emoji-picker-react": "^4.12.0",
     "lucide-react": "^0.451.0",
     "next": "14.2.15",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.9",
